manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
  namespace: my-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec: 
       containers:
         - name: nginx-app
           image: 9562066323/my-app-minikube:v1
           ports: 
            - containerPort: 80
