manifests/liveness-readyness-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-probes
  namespace: my-nginx-app
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: 9562066323/my-app-minikube:v1
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        livenessProbe:
          httpGet:
            path: /health
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
