manifests/nodeaffinitydeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
  namespace: my-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
        prometheus.io/path: "/metrics"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role
                    operator: In
                    values:
                      - minikube-test
      
      tolerations:
        - key: "role"
          operator: "Equal"
          value: "custom"
          effect: "NoSchedule"
      
      containers:
        - name: nginx-app
          image: 9562066323/minikube:v2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
