manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-nginx-app
spec:
  type: NodePort
  ports:
    - port: 80     
      targetPort: 80
      nodePort: 30006  
  selector:
    app: nginx-app
